# FileBasedAgentRuntime

./: .env.example  .gitignore  AGENT_IMPROVEMENTS.md  ARCHITECTURE.md  CHANGELOG_FIX_20250810.md  DIFY_PLUGIN_DEVELOPMENT.md  HOTFIX_20250809.md  HOTFIX_20250810_ASYNC_GENERATOR.md  INCREMENTAL_OUTPUT_DESIGN.md  MODEL_CONFIG_USAGE.md  Makefile  PROJECT_STATUS.md  PROMPT_UPDATE_NOTES.md  QUICKSTART.md  README.md  check.py  context_window_tools_ready.md  debug_invoke_flow.py  debug_messages.py  demo.py  edit_file_改进分析.md  example_tasks.txt  final_test_input.txt  fix_tool_result_issue.py  guideline_tools_plugin_focused.md  improved_main_example.py  main.py  main_new.py  mvp_plan.md  prd.md  prompt_improvement_plan_tools_focused.md  pyproject.toml  test_basic.py  test_basic_flow.py  test_input.txt  test_input2.txt  test_multi_tool_calls.py  test_simple_multi_turn.py  文本重复输出问题分析.md  错误分析报告.md
agent_root/: context_window_backup_20250810_231154.md  context_window_main.md  guideline.md  guideline_backup_20250810_231154.md
agent_root/logs/: operations_20250808_165304.jsonl
agent_root/storage/documents/: available_tools_guide.md  tools_quick_reference.md  tools_summary.md
agent_root/storage/few_shots/: tools_usage_example.py
agent_root/storage/few_shots/google_calendar/provider/: google_calendar.py
agent_root/storage/few_shots/google_calendar/tools/: create_event.py  list_calendars.py  list_events.py  search_events.py
agent_root/storage/few_shots/hackernews/provider/: hackernews.py
agent_root/storage/few_shots/hackernews/tools/: get_multiple_users.py  get_story_info.py  get_top_stories.py  get_user_info.py
agent_root/storage/few_shots/sqlite/provider/: sqlite_plugin.py
examples/: test_agent_input.txt  test_incremental_output.py
logs/: output_20250810.txt
src/: __init__.py  async_agent.py  async_main.py  config.py  console_handler.py  entities.py  file_editor.py  file_system_agent.py  incremental_output_formatter.py  logger.py  main.py  path_manager.py  persistent_shell.py  stateful_shell.py  stream_processor.py  tools.py  tools_registry.py
(+7 files in other folders)
